Revision After Internship - 3

--- a/index.html
+++ b/index.html
@@ -2503,7 +2503,7 @@
       
       <li>
         <i class="fa-li fas fa-map-marker fa-2x" aria-hidden="true"></i>
-        <span id="person-address" itemprop="address">5435 Claybourne Street, Pittsburgh, PA 15232, United States</span>
+        <span id="person-address" itemprop="address">226 Shady Avenue, Pittsburgh, PA 15206, United States</span>
       </li>
       
 
@@ -2521,7 +2521,7 @@
       <input id="map-provider" value="3">
       <input id="map-lat" value="40.456">
       <input id="map-lng" value="-79.94">
-      <input id="map-dir" value="5435 Claybourne Street, Pittsburgh, PA 15232, United States">
+      <input id="map-dir" value="226 Shady Avenue, Pittsburgh, PA 15206, United States">
       <input id="map-zoom" value="15">
       <input id="map-api-key" value="">
     </div>
